--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@connectrpc/connect": "^1.1.3",
     "@prisma/client": "^5.6.0",
     "@slack/bolt": "^3.15.0",
     "@slack/oauth": "^2.6.1",
