--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@bufbuild/buf": "^1.28.1",
+    "@bufbuild/protobuf": "^1.5.0",
+    "@bufbuild/protoc-gen-es": "^1.5.0",
     "@connectrpc/connect": "^1.1.3",
     "@prisma/client": "^5.6.0",
     "@slack/bolt": "^3.15.0",
