--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@bufbuild/protobuf": "^1.5.0",
     "@bufbuild/protoc-gen-es": "^1.5.0",
     "@connectrpc/connect": "^1.1.3",
+    "@connectrpc/connect-express": "^1.1.3",
+    "@connectrpc/connect-node": "^1.1.4",
+    "@connectrpc/protoc-gen-connect-es": "^1.1.4",
     "@prisma/client": "^5.6.0",
     "@slack/bolt": "^3.15.0",
     "@slack/oauth": "^2.6.1",
