--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@slack/oauth": "^2.6.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "tsx": "^4.5.0"
+    "tsx": "^4.5.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
