--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "tsx index.ts",
     "dev": "tsx watch index.ts",
-    "format": "prettier --ignore-path ./.prettierignore --write ."
+    "format": "prettier --ignore-path ./.prettierignore --write .",
+    "rpc:gen": "npx buf generate ./proto/eliza.proto",
+    "db:migrate-dev": "npx prisma migrate dev",
+    "db:migrate-deploy": "npx prisma migrate deploy",
+    "db:push": "npx prisma db push"
   },
   "keywords": [],
   "author": "",
