--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "tsx": "^4.5.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
