--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^5.6.0",
     "@slack/bolt": "^3.15.0",
     "@slack/oauth": "^2.6.1",
+    "@slack/web-api": "^6.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "tsx": "^4.5.0",
