--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2015",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "esModuleInterop": true
-  }
+  },
 }
