--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "inventory",
   "version": "1.0.0",
-  "description": "",
+  "description": "Hack Club's custom inventory system for Slack!",
+  "homepage": "https://github.com/hackclub/inventory",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hackclub/inventory"
+  },
   "main": "index.js",
   "scripts": {
     "start": "tsx index.ts",
@@ -11,8 +16,7 @@
     "db:migrate-dev": "npx prisma migrate dev",
     "db:migrate-deploy": "npx prisma migrate deploy"
   },
-  "keywords": [],
-  "author": "",
+  "author": "hackclub",
   "license": "MIT",
   "dependencies": {
     "@bufbuild/buf": "^1.28.1",
@@ -35,7 +39,7 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "prettier": "^3.1.0",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2"
   }
