--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Build and publish client
         run: |
           cp -r ./gen ./client
+          cd client && npm run build && cd ..
       # - name: Generate documentation
       #   run: |
       #     npm run gen
