Rework some parts, workflow and deploy

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "tsx index.ts",
     "dev": "tsx watch index.ts",
     "format": "prettier --ignore-path ./.prettierignore --write .",
-    "rpc:gen": "npx buf generate proto",
+    "rpc:gen": "npx buf generate proto && cp -r ./gen ./client",
     "db:migrate-dev": "npx prisma migrate dev",
     "db:migrate-deploy": "npx prisma migrate deploy"
   },
