--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           npm i -f
+          cd client && npm i -f && cd ..
       - name: Format
         run: |
           npm run format
