--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@hackclub/inventory",
-  "version": "1.0.2",
+  "name": "@hackclub/bag",
+  "version": "1.0.0",
   "description": "Hack Club's custom inventory system for Slack!",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
