--- a/docs/package.json
+++ b/docs/package.json
@@ -9,8 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@hackclub/icons": "^0.0.14",
+    "@hackclub/meta": "^1.1.33",
+    "@hackclub/theme": "^0.3.3",
+    "highlight.js": "^11.9.0",
+    "next": "14.0.2",
+    "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0",
+    "theme-ui": "^0.16.1"
   }
 }
