--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "quoteProps": "consistent",
   "semi": false,
   "tabWidth": 2,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "plugins": ["@trivago/prettier-plugin-sort-imports"]
 }
