--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "yaml": "^2.3.4"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.10.0",
     "prettier": "^3.1.0",
     "prisma": "^5.7.1",
