--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@hackclub/bag",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Hack Club's custom inventory system for Slack!",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup"
   },
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/hackclub/inventory#readme",
   "dependencies": {
+    "@bufbuild/protobuf": "^1.6.0",
     "@connectrpc/connect": "^1.3.0",
     "@connectrpc/connect-node": "^1.3.0"
   },
