--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@slack/web-api": "^6.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-cron": "^3.0.3",
     "tsx": "^4.5.0",
     "uuid": "^9.0.1",
     "yaml": "^2.3.4"
