--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@connectrpc/connect-express": "^1.1.3",
     "@connectrpc/connect-node": "^1.1.4",
     "@connectrpc/protoc-gen-connect-es": "^1.1.4",
+    "@hackclub/bag": "^1.0.6",
     "@prisma/client": "^5.7.1",
     "@slack/bolt": "^3.15.0",
     "@slack/oauth": "^2.6.1",
