--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ node_modules
 
 setup.ts
 test.ts
+*test.ts
 TODO.md
 
 yarn-error.log
@@ -13,4 +14,5 @@ apps
 
 client/gen
 client/dist
+client/proto
 *.pem
