--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@connectrpc/connect-express": "^1.1.3",
     "@connectrpc/connect-node": "^1.1.4",
     "@connectrpc/protoc-gen-connect-es": "^1.1.4",
+    "@grpc/grpc-js": "^1.9.14",
+    "@grpc/proto-loader": "^0.7.10",
     "@hackclub/bag": "^1.0.6",
     "@prisma/client": "^5.7.1",
     "@slack/bolt": "^3.15.0",
