--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@bufbuild/protobuf": "^1.5.0",
     "@bufbuild/protoc-gen-es": "^1.5.0",
     "@connectrpc/connect": "^1.1.3",
-    "@connectrpc/connect-express": "^1.1.3",
+    "@connectrpc/connect-fastify": "^1.3.0",
     "@connectrpc/connect-node": "^1.1.4",
     "@connectrpc/protoc-gen-connect-es": "^1.1.4",
     "@hackclub/bag": "^1.0.6",
@@ -32,6 +32,7 @@
     "@slack/oauth": "^2.6.1",
     "@slack/web-api": "^6.11.0",
     "dotenv": "^16.3.1",
+    "fastify": "^4.26.0",
     "node-cron": "^3.0.3",
     "tsx": "^4.5.0",
     "uuid": "^9.0.1",
