--- a/maintainers.yaml
+++ b/maintainers.yaml
@@ -1,3 +1,7 @@
 # Admins that are allowed to allow or deny certain requests, among other privileges
 jc:
   slack: U03MNFDRSGJ
+kara:
+  slack: U032A2PMSE9
+cwalker:
+  slack: UDK5M9Y13
