--- a/docs/package.json
+++ b/docs/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 5000",
-    "build": "next build",
+    "build": "node build.js && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@grpc/proto-loader": "^0.7.10",
     "@hackclub/icons": "^0.0.14",
     "@hackclub/meta": "^1.1.33",
     "@hackclub/theme": "^0.3.3",
