--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,21 +15,27 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
-      - name: Install Node.js and npm
+      - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18.17.0'
       - name: Install dependencies
-        run: |
-          npm i -f
-          cd client && npm i -f && cd ..
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install
       - name: Format
-        run: |
-          npm run format
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: format
       - name: Generate proto
-        run: |
-          npm run rpc:gen
-      - name: Build client
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: rpc:gen
+      - name: Copy proto files
         run: |
           cp -r ./gen ./client
-          cd client && npm run build && cd ..
+      - name: Build client
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: build
+          dir: 'client'
