--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
+    "rehype-highlight": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-toc": "^9.0.0",
