--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hackclub/bag",
   "version": "1.0.41",
-  "description": "Hack Club's custom inventory system for Slack!",
+  "description": "Hack Club's custom RPG system for Slack!",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hackclub/inventory.git"
+    "url": "git+https://github.com/hackclub/bag.git"
   },
   "author": "hackclub",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hackclub/inventory/issues"
+    "url": "https://github.com/hackclub/bag/issues"
   },
-  "homepage": "https://github.com/hackclub/inventory#readme",
+  "homepage": "https://github.com/hackclub/bag#readme",
   "dependencies": {
     "@bufbuild/protobuf": "^1.6.0",
     "@connectrpc/connect": "^1.3.0",
