--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@connectrpc/connect-fastify": "^1.3.0",
     "@connectrpc/connect-node": "^1.1.4",
     "@connectrpc/protoc-gen-connect-es": "^1.1.4",
+    "@elastic/elasticsearch": "^8.12.2",
     "@hackclub/bag": "^1.0.30",
-    "@octokit/auth-app": "^6.0.3",
-    "@octokit/core": "^5.1.0",
     "@prisma/client": "^5.10.2",
     "@slack/bolt": "^3.15.0",
     "@slack/oauth": "^2.6.1",
     "@slack/web-api": "^6.11.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "fastify": "^4.26.0",
     "lru-cache": "^10.2.0",
