--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "fastify": "^4.26.0",
+    "ioredis": "^5.3.2",
     "lru-cache": "^10.2.0",
     "node-cron": "^3.0.3",
     "octokit": "^3.1.2",
