--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20.10.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "prettier": "^3.1.0",
     "prisma": "^5.7.1",
     "ts-node": "^10.9.1",
