should be much easier to run locally now

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
-DATABASE_URL=
-SLACK_SIGNING_SECRET=
-SLACK_APP_TOKEN=
-SLACK_BOT_TOKEN=
-NODE_ENV=development
+DATABASE_URL= # the url for your postgres database. e.g. postgresql://username:password@host/dbname 
+SLACK_SIGNING_SECRET= # the signing secret for your slack app
+SLACK_APP_TOKEN= # the app token for your slack app (might not be needed)
+SLACK_BOT_TOKEN= # the bot token for your slack app
+NODE_ENV= # e.g. development
+REDIS_PORT= # e.g. 6379
+SLACK_BOT=true # whether or not to run the slack bot
+REDIS_HOST= # e.g. localhost
+SLASH_COMMAND_PREFIX= # the prefix for all slash commands. if you're running locally, this disambiguates your cmds from the real ones
