--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "tsx index.ts",
-    "dev": "tsx watch index.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node index.ts",
     "format": "prettier --ignore-path ./.prettierignore --write .",
     "rpc:gen": "npx buf generate proto && cp -r ./gen ./client",
     "db:migrate-dev": "npx prisma migrate dev",
