--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lru-cache": "^10.2.0",
     "node-cron": "^3.0.3",
     "octokit": "^3.1.2",
+    "prom-client": "^15.1.3",
     "tsx": "^4.5.0",
     "uuid": "^9.0.1",
     "yaml": "^2.3.4"
