--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
   "bugs": {
     "url": "https://github.com/hackclub/bag/issues"
   },
-  "homepage": "https://github.com/hackclub/bag#readme",
+  "homepage": "https://bag.hackclub.com/client/methods.mdx",
   "dependencies": {
     "@bufbuild/protobuf": "^1.6.0",
     "@connectrpc/connect": "^1.3.0",
